<resources>
    <string name="app_name">零零7</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="error_no_data">没有找到相关数据</string>
    <string name="state_tip_no_data">无相关数据</string>
    <string name="state_tip_server_error">网络异常错误，请重试或者检查网络</string>
    <string name="check_phone_net">请检查本机网络是否打开！</string>
    <string name="send_again">重新发送</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="sign">签到</string>
    <string name="best_bew">最新揭晓</string>
    <string name="mysign">我的中奖</string>
    <string name="mysignvalue">我的中奖记录</string>
    <string name="mysigngoinvalue">我的参与记录</string>
    <string name="zhongjiangla">中奖啦</string>
    <string name="gongxihuode">恭喜获得</string>
    <string name="writesign">请填写您的领奖信息</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="adr">地址</string>
    <string name="kefu1">客服将在24小时内与您联系，请保持电话畅通。请在</string>
    <string name="kefu2">奖品有效期内填写信息并确认填写内容无误，过期未</string>
    <string name="kefu3">填写视为自动放弃奖励。奖励有效期：5个工作日（客服电话：0731 8535177）</string>
    <string name="commit">提交</string>
    <string name="select_school">去选择学校</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechatpay">微信支付</string>
    <string name="inputadr">请输入详细的地址</string>
    <string name="loudonghao">楼栋号</string>
    <string name="sushehao">宿舍号/教室/其他</string>
    <string name="inputname">请输入联系人姓名</string>
    <string name="inputphone">请输入联系人电话号码</string>
    <string name="setadr">设置默认地址：</string>
    <string name="finish">完成</string>
    <string name="select_pay">选择下面支付方式</string>
    <string name="pay">支付</string>
    <string name="signjifen">签到领积分</string>
    <string name="signsuccess">签到成功</string>
    <string name="qiandao2">签到获得2积分</string>
    <string name="sharemore">分享可获得更多积分</string>
    <string name="share">分享</string>
    <string name="xiadanshijian">下单时间：</string>
    <string name="reson1">退款原因：未按约定时间发货</string>
    <string name="_50_00">退款金额：￥50.00</string>
    <string name="reson2">退款说明：选填选填选填</string>
    <string name="_2018_06_21_18_26_26">申请时间：2018-06-21 18:26:26</string>
    <string name="runlevel">跑腿等级</string>
    <string name="state_tip_nodianpu">店铺未开通</string>
    <string name="state_nojilu">暂无记录</string>
    <string name="state_noshangpin">暂无商品</string>
    <string name="state_notupian">暂无图片</string>
    <string name="joindriver1">1零零7校园驾校是做什么的？零零7将依托和整合全国各地驾校资源，打造高校驾考网上报名服务平台，吸引全国各地学员通过零零7校园驾校选择心仪驾校并享受在线报名等一站式的在线服务。</string>
    <string name="joindriver2">2零零7校园驾校能为驾校提供哪些服务？No.1学员在线报名和支付渠道。No.2免费的后台管理系统和技术支持。No.3驾校优惠活动发布渠道。No.4其他定制服务和广告增值服务。</string>
    <string name="joindriver3">3与零零7校园驾校合作收费吗？驾校入驻零零7校园驾校平台无需任何费用，只有当学员通过平台成功报名时，平台才会从驾校收取相应的服务费用，具体费用根据实际商务谈判决定。学员的报名费用将打入该驾校的支付宝账户中，驾校可以随时申请提现或转账。其他增值服务按零零7平台相关政策和协议执行。</string>
    <string name="joindriver4">4怎样与零零7校园驾校合作合作？了解零零7校园驾校→联系我们→业务人员上门洽谈→审核驾校资质→签订合作协议→提交材料→成功入驻</string>
    <string name="joindriver5">5驾校可通过以下两种方式与零零7取得联系：No.1拨打零零7校园驾校合作服务热线07311-85315177咨询相关事宜No.2登录零零7app，打开校园驾校，在驾校详情底部栏-驾校合作入口进行在线申请驾校资质审核包括：营业执照、场地规模、开业年限，教练人数等。</string>
</resources>
