<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/more"
        android:title="@string/sign"
        app:showAsAction="ifRoom">
        <!-- item包含menu表示该menu是item下的子菜单 -->
        <menu>
            <!-- 将group中的菜单项放于一个组里面 -->
            <group>
                <item
                    android:id="@+id/qiandao"
                    android:title="@string/sign"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/rencently"
                    android:title="@string/best_bew"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/minesigh"
                    android:title="@string/mysign"
                    app:showAsAction="ifRoom" />

            </group>
        </menu>
    </item>
</menu>