<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.ffn.zerozeroseven.view.TopView
        android:id="@+id/topView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:background="@color/money">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/hook"
                    android:drawablePadding="6dp"
                    android:text="退款申请已提交"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rc_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:background="@color/numberical_default_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_reson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/reson1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/_50_00"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/reson2"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/_2018_06_21_18_26_26"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:background="@color/numberical_default_bg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="17dp"
                android:text="退款流程"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/numberical_default_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="46dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bt_one"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/redcirclebutton"
                        android:text="1"
                        android:textColor="@color/white" />

                    <View
                        android:id="@+id/line1"
                        android:layout_width="1dp"
                        android:layout_height="46dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/numberical_default_text" />

                    <Button
                        android:id="@+id/bt_two"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/defaltcirclebutton"
                        android:text="2"
                        android:textColor="@color/white" />

                    <View
                        android:id="@+id/line2"
                        android:layout_width="1dp"
                        android:layout_height="46dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/numberical_default_text" />

                    <Button
                        android:id="@+id/bt_three"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/defaltcirclebutton"
                        android:text="3"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="8dp"
                            android:text="退款申请已提交"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/tv_gettime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="2018-06-26 18:00"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:text="您的退款申请已提交，请耐心等待工作人员审核。"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="25dp"
                        android:text="退款申请审核中"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:text="您的退款申请正在由工作人员审核，审核需要1-2个工作日！"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="25dp"
                        android:text="退款成功"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:text="您的退款申请已由工作人员审核完成，退款会在3-5个工作日内退还至您的原支付账户。"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/white" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>